traefik_old2/03-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: default
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik_old2-ingress-controller
      containers:
        - name: traefik_old2
          image: traefik:v2.1
          args:
            - --log.level=DEBUG
            - --accesslog=true
            - --accesslog.format=json
            - --api=true
            - --api.insecure=true
            - --api.dashboard=true
            - --entrypoints.web.address=:80
            - --entryPoints.websecure.Address=:443
            - --certificatesResolvers.le.acme.dnsChallenge=true
            - --certificatesResolvers.le.acme.dnsChallenge.provider=cloudflare
            - --certificatesresolvers.le.acme.email=chhenni@gmail.com
            - --certificatesresolvers.le.acme.storage=acme.json
            # Please note that this is the staging Let's Encrypt server.
            # Once you get things working, you should remove that whole line altogether.
            # - --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --providers.kubernetescrd = true  # set kubernetes custom resource defintion as the provider
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 8080
      name: admin
      targetPort: 8080
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443

---
apiVersion: traefik_old2.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-route
  namespace: default

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: Host(`traefik_old2.henni.dev`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`))
      kind: Rule
      services:
        - kind: Service
          name: traefik_old2
          port: 8080
          scheme: http
#      middlewares:
#        - name: traefik_old2-dashboard-auth # Referencing the BasicAuth middleware
#          namespace: traefik_old2
  tls:
    certResolver: le
    domains:
      - main: henni.dev
        sans:
          - "*.henni.dev"
